# arxiv-reader-mcp

./: LICENSE  main.py  pyproject.toml
arxiv_mcp_server/: server.py
src/: server.py
tests/: test_parser.py
