[project]
name = "arxiv-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.28.1",
    "mcp==1.27.2",
    "feedparser==6.0.12",
    "pdfminer-six==20260107",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
arxiv-mcp-server = "server:server.run"
