[project]
name = "arxiv-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx==0.28.1",
    "mcp==1.27.2",
    "feedparser==6.0.12",
    "pymupdf==1.25.5",
    "camelot-py[base]>=2.0.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["assets*"]

[project.scripts]
arxiv-mcp-server = "arxiv_mcp_server.server:main"
